--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    Simon ist doof
     <div id="error" class="error">
         <p id="error-message">Test Error</p>
     </div>
