--- a/NCup/index.html
+++ b/NCup/index.html
@@ -452,7 +452,7 @@ table {
   </div>
 </div>
 
-<div style="width: 100%; text-align: center; display:flex; align-items:center; flex-direction: column;">
+<div style="width: 100%;  max-width: 1330px; text-align: center; display:flex; align-items:center; flex-direction: column;">
   <h1>Reaktionen</h1>
   <form id="AddReactionForm" class="reaction" style="display: flex; flex-direction: column; padding: 10px; gap:5px">
     <span>Deine Reaktion!</span>
